kubernetes/k3s-prod-a/workloads/navidrome/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.54.5@sha256:0648e9772404e29138fe76d1a9dfaebba9c12f7cc20b5ed1bfb3469b0da2c3d3
          startupProbe:
            httpGet:
              path: /app
              port: 4533
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music
            readOnly: true
